[package]
name = "roguelike_experiment"
version = "0.1.0"
authors = ["Jeremy Day <jadaytime@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
futures = "0.3"
rand = "0.7"
wgpu = "0.5"
wgpu_glyph = "0.9"
winit = "0.22"
