[package]
name = "roguelike_experiment"
version = "0.1.0"
authors = ["Jeremy Day <jadaytime@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
futures = "0.3"
rand = "0.7"
wgpu = "0.6"
wgpu_glyph = { git = "https://github.com/hecrj/wgpu_glyph/", rev = "a2ca593147b416ef99fa573198edb692dfaee07e"}
winit = "0.22"
